[Chore #165956261] Update UI according to coGrammer feedback

--- a/UI/index.html
+++ b/UI/index.html
@@ -25,6 +25,7 @@
     <section class="home-banner">
       <div class="banner-txt">
         <h2>MKOPO</h2>
+        <h3>We love to see you grow</h3>
         <h3>
           A platform that provide short term soft loans to individuals.
         </h3>
@@ -55,6 +56,19 @@
             LET US HELP YOU REALISE YOUR DREAM.
           </p>
         </div>
+      </div>
+    </section>
+    <section>
+      <div class="info-content">
+        <h3>How it works</h3>
+        <p>
+          First and foremost you can access our loan from anywhere at time.
+        </p>
+        <p>
+          If you feel your pocket is alittle pinched and need some cash to start
+          or progress your business, then you are in the right place! LET US
+          HELP YOU REALISE YOUR DREAM.
+        </p>
       </div>
     </section>
     <!--End of about section-->
@@ -90,7 +104,9 @@
         </div>
       </div>
       <div class="copyright">
-        <p>&copy 2019 Quick Credit Ltd. All Rights Reserved</p>
+        <p>Quick Credit Ltd.</p>
+
+        <p>&copy 2019 All Rights Reserved</p>
       </div>
     </footer>
     <!--End of Footer section-->
