[Chore #165957783] Refactor code base

--- a/UI/index.html
+++ b/UI/index.html
@@ -27,7 +27,7 @@
         <h2>MKOPO</h2>
         <h3>We love to see you grow</h3>
         <h3>
-          A platform that provide short term soft loans to individuals.
+          This is a platform that provide short term soft loans to individuals.
         </h3>
         <button class="btn-join">
           <a href="./views/register.html" class="btn-join">Join Us</a>
@@ -56,19 +56,6 @@
             LET US HELP YOU REALISE YOUR DREAM.
           </p>
         </div>
-      </div>
-    </section>
-    <section>
-      <div class="info-content">
-        <h3>How it works</h3>
-        <p>
-          First and foremost you can access our loan from anywhere at time.
-        </p>
-        <p>
-          If you feel your pocket is alittle pinched and need some cash to start
-          or progress your business, then you are in the right place! LET US
-          HELP YOU REALISE YOUR DREAM.
-        </p>
       </div>
     </section>
     <!--End of about section-->
