[Chore #165966279] Update gh-pages

--- a/UI/index.html
+++ b/UI/index.html
@@ -13,7 +13,7 @@
       <nav class="navbar">
         <a class="nav-brand" href="index.html">MKOPO </a>
         <ul class="nav-links">
-          <li class="login"><a href="./views/login.html">Login </a></li>
+          <li class="login"><a href="./views/userLogin.html">Login </a></li>
           <li class="joinus"><a href="./views/register.html">Join Us </a></li>
         </ul>
       </nav>
@@ -25,9 +25,11 @@
     <section class="home-banner">
       <div class="banner-txt">
         <h2>MKOPO</h2>
+        <h3>We love to see you grow</h3>
         <h3>
-          A platform that provide short term soft loans to individuals.
+          This is a platform that provide short term soft loans to individuals.
         </h3>
+		</br>
         <button class="btn-join">
           <a href="./views/register.html" class="btn-join">Join Us</a>
         </button>
@@ -90,7 +92,9 @@
         </div>
       </div>
       <div class="copyright">
-        <p>&copy 2019 Quick Credit Ltd. All Rights Reserved</p>
+        <p>Quick Credit Ltd.</p>
+
+        <p>&copy 2019 All Rights Reserved</p>
       </div>
     </footer>
     <!--End of Footer section-->
