Update and rename index.ejs to index.html

--- a/UI/index.html
+++ b/UI/index.html
@@ -13,7 +13,7 @@
       <nav class="navbar">
         <a class="nav-brand" href="index.html">MKOPO </a>
         <ul class="nav-links">
-          <li class="login"><a href="./views/userLogin.html">Login </a></li>
+          <li class="login"><a href="./views/userLogin.ejs">Login </a></li>
           <li class="joinus"><a href="./views/register.html">Join Us </a></li>
         </ul>
       </nav>
